--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,17 @@
-<header class="header">
-    <h1>Lista De Projetos</h1>
-    <span class="material-symbols-outlined" id="menu">menu</span>
-</header>
+<div class="container">
+    <header class="header">
+        <h1>Lista De Projetos</h1>
+        <span class="material-symbols-outlined" id="menu" (click)="menuShow()">menu</span>
+    </header>
+    <div class="menu-lateral">
+        <div class="menu-header">
+            <h3>Projetos</h3>
+            <span class="material-symbols-outlined">
+                add
+            </span>
+        </div>
+        <ul class="menu-items-content" *ngFor="let project of projects">
+            <li>{{project.title}}</li>
+        </ul>
+    </div>
+</div>
