--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,9 @@
+
+.container{
+    height: 100vh;
+    width: 100%;
+}
+
 .header{
     background-color: antiquewhite;
     display: flex;
@@ -14,4 +20,31 @@
 #menu:hover{
    color: gray;
    transition: 0.5s;
+}
+
+
+
+.menu-lateral{
+    display: none;
+    border: 1px solid red;
+    width: 300px;
+    height: 100%;
+    padding: 10px;
+}
+
+li{
+    list-style: none;
+}
+
+.menu-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 10px;
+    
+}
+
+.open{
+    display: block;
+    
 }
