--- a/src/app/components/notes/notes.component.scss
+++ b/src/app/components/notes/notes.component.scss
@@ -1,5 +1,5 @@
 .content-notes{
-background-color: antiquewhite;
+    background-color: rgb(222, 120, 30);
 height: 80px;
 display: flex;
 justify-content: space-around;
