--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -26,7 +26,7 @@
 
         <div class="notes-content">
             <app-notes></app-notes>
-            <button class="material-symbols-outlined" (click)="openDialognote()">
+            <button id="add-btn" class="material-symbols-outlined" (click)="openDialognote()">
                 add
             </button>
         </div>
