--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -6,7 +6,7 @@
 }
 
 .header{
-    background-color: antiquewhite;
+    background-color: rgb(222, 120, 30);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -27,7 +27,6 @@
 
 .menu-lateral{
     display: none;
-    border: 1px solid red;
     width: 300px;
     height: 100%;
     padding: 10px;
@@ -49,11 +48,12 @@ li{
 
 .open{
     display: block;
+    background-color: rgb(222, 120, 30);
 }
 
 
 .menu-items-content{
-    border: 1px solid green;
+    border: 1px solid rgb(0, 0, 0);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -69,13 +69,27 @@ li{
 
 .box{
     display: flex;
-    height:100vh;
+    height: 100%;
+ 
+    
 }
 
 .notes-content{
-    border: 1px solid blue;
     flex-grow:1 ;
     padding: 20px;
+    position: relative;
+    height: 100%;
 
 }
 
+
+#add-btn{
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+    background-color: rgb(0, 119, 255);
+    border: transparent;
+    border-radius: 50%;
+    font-size: xx-large;
+    padding: 10px;
+}
