--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Hi </h2>
+
 <mat-dialog-content>
   <p>Qual o titulo do projeto?</p>
   <mat-form-field>
@@ -7,6 +7,6 @@
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button [mat-dialog-close]="data.title" cdkFocusInitial>Ok</button>
+  <button mat-button (click)="onNoClick()">Cancelar</button>
+  <button mat-button [mat-dialog-close]="data.title" cdkFocusInitial>Salvar</button>
 </mat-dialog-actions>
